--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cra-shop",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dimitryuk.github.io/material-ui-shop/",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
